--- a/package.json
+++ b/package.json
@@ -2,20 +2,22 @@
     "name": "ws_task",
     "version": "1.0.0",
     "description": "Template for the WebSocket remote control task",
-    "main": "index.js",
-    "type": "module",
     "scripts": {
-        "start": "node ./index.js",
-        "start:dev": "nodemon ./index.js",
+        "start": "node ./src/index.ts",
+        "start:dev": "nodemon --exec ts-node ./src/index.ts",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Andrei Auchynnikau",
     "keywords": [],
     "license": "ISC",
     "devDependencies": {
-        "nodemon": "^2.0.16"
+        "nodemon": "^2.0.22"
     },
     "dependencies": {
+        "@types/node": "^22.8.1",
+        "@types/ws": "^8.5.12",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.6.3",
         "ws": "^8.8.0"
     }
 }
