--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "description": "Template for the WebSocket remote control task",
     "scripts": {
-        "start": "node ./src/index.ts",
+        "start": "ts-node ./src/index.ts",
         "start:dev": "nodemon --exec ts-node ./src/index.ts",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
